[gd_scene load_steps=8 format=3 uid="uid://b56ieg085fppr"]

[ext_resource type="Script" uid="uid://75r8mn8eb2nt" path="res://Scripts/Leveis/level_zen.gd" id="1_h16eq"]
[ext_resource type="PackedScene" uid="uid://db3rkmvcgmotf" path="res://Cenas/Partida/tile_maps_chao.tscn" id="2_levs5"]
[ext_resource type="PackedScene" uid="uid://b1mtmyav5n0qq" path="res://Cenas/Partida/Jogadores/spawn_jogadores.tscn" id="5_c3vl7"]
[ext_resource type="PackedScene" uid="uid://mvp5raoekisy" path="res://Cenas/Ferramentas/ferramentas_mgmt.tscn" id="6_wohbw"]
[ext_resource type="Script" uid="uid://ymebirrcc0d3" path="res://Scripts/Partida/locais_plantar_colecao.gd" id="11_vw8su"]
[ext_resource type="PackedScene" uid="uid://b6sdx5v5l772m" path="res://Cenas/Interface/hud.tscn" id="13_gupm4"]

[sub_resource type="Curve" id="Curve_h16eq"]
_data = [Vector2(0, 0.2), 0.0, 0.484919, 0, 0, Vector2(0.741697, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[node name="Level_Zen" type="Node" node_paths=PackedStringArray("camera_target", "arvores_colecao", "lixos_colecao", "locais_plantar_colecao", "ferramenta_mgmt", "hud")]
script = ExtResource("1_h16eq")
camera_lerp_speed_curve = SubResource("Curve_h16eq")
camera_target = NodePath("SpawnJogadores/Jogador2")
arvores_colecao = NodePath("ArvoresColecao")
lixos_colecao = NodePath("LixosColecao")
locais_plantar_colecao = NodePath("LocaisPlantarColecao")
ferramenta_mgmt = NodePath("FerramentasMgmt")
hud = NodePath("Camera2D/HUD")
duracao_partida_segundos = 9999

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(642, 361)
position_smoothing_speed = 1.0

[node name="HUD" parent="Camera2D" instance=ExtResource("13_gupm4")]

[node name="ColorCorrectionEffect" parent="Camera2D/HUD" index="1"]
offset_left = -646.0
offset_top = -367.0
offset_right = 646.0
offset_bottom = 367.0

[node name="LabelTempo" parent="Camera2D/HUD" index="3"]
visible = false

[node name="BarraProgresso" parent="Camera2D/HUD" index="4"]
offset_left = -640.0
offset_top = 329.0
offset_right = 640.0
offset_bottom = 360.0

[node name="ImagemFim" parent="Camera2D/HUD/GameOverMenu" index="0"]
position = Vector2(-646, -363)

[node name="ControlBtns" parent="Camera2D/HUD/GameOverMenu" index="1"]
offset_top = 354.0
offset_bottom = 354.0

[node name="TileMaps" parent="." instance=ExtResource("2_levs5")]

[node name="TileMapLayerAgua" parent="TileMaps" index="0"]
tile_map_data = PackedByteArray()

[node name="TileMapDualAreia" parent="TileMaps" index="1"]
tile_map_data = PackedByteArray()

[node name="TileMapDualRaizes" parent="TileMaps" index="2"]
tile_map_data = PackedByteArray()

[node name="TileMapDualLodo" parent="TileMaps" index="3"]
tile_map_data = PackedByteArray()

[node name="SpawnJogadores" parent="." node_paths=PackedStringArray("ferramentas_mgmt", "tilemaps_chao") instance=ExtResource("5_c3vl7")]
position = Vector2(518, 343)
ferramentas_mgmt = NodePath("../FerramentasMgmt")
tilemaps_chao = NodePath("../TileMaps")

[node name="FerramentasMgmt" parent="." instance=ExtResource("6_wohbw")]

[node name="Corte" parent="FerramentasMgmt" index="1"]
position = Vector2(781, 442)

[node name="Plantar" parent="FerramentasMgmt" index="2"]
position = Vector2(754, 176)

[node name="Recolhe" parent="FerramentasMgmt" index="3"]
position = Vector2(861, 296)

[node name="ArvoresColecao" type="CanvasGroup" parent="."]

[node name="LixosColecao" type="CanvasGroup" parent="."]

[node name="LocaisPlantarColecao" type="Node2D" parent="."]
z_index = -1
script = ExtResource("11_vw8su")

[editable path="Camera2D/HUD"]
[editable path="TileMaps"]
[editable path="SpawnJogadores"]
[editable path="SpawnJogadores/Jogador1"]
[editable path="SpawnJogadores/Jogador1/IndicadorDirecao"]
[editable path="SpawnJogadores/Jogador2"]
[editable path="SpawnJogadores/Jogador2/IndicadorDirecao"]
[editable path="FerramentasMgmt"]
